# recallo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SOURCES_AUDIT.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: demo.md  demo.tape  launch.md
recallo/: __init__.py  cli.py  cortex.py  embed.py  ingestor.py  memory.py  safety.py  schema.sql
tests/: test_cli.py  test_cortex.py  test_embed.py  test_ingestor.py  test_memory.py  test_memory_vec.py  test_replay.py  test_safety.py
